# bank_widget

./: .gitignore  logging_config.ini  pyproject.toml
dop_tasks/: dop_data_analysis.py  dop_decorators.py  dop_file_folder.py  dop_format_date.py  dop_get_weather.py  dop_integer.py  dop_log_json.py  dop_logger.py  dop_online_shop.py  dop_products.py  dop_save_photos.py  dop_strings.py  dop_tasks_re.py  dop_titanic.py
src/: decorators.py  external_api.py  generators.py  handlers.py  main.py  masks.py  my_logger.py  processing.py  readers.py  test_data.py  test_info.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_handlers.py  test_main.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
